objects/HR_Event__c.object
<CustomObject>
    <fields>
        <fullName>Attendee__c</fullName>
        <label>#Attendee</label>
        <summaryForeignKey>HR_Event_Attendance__c.HR_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cluster1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cluster</label>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>HR Events</relationshipLabel>
        <relationshipName>HR_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cluster_s__c</fullName>
        <inlineHelpText>Select all of the Clustersthat you want this HR Event to be available to.</inlineHelpText>
        <label>Cluster(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BANT</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BCHIC</fullName>
                </value>
                <value>
                    <fullName>BHEN</fullName>
                </value>
                <value>
                    <fullName>BlackCountry</fullName>
                </value>
                <value>
                    <fullName>CAS</fullName>
                </value>
                <value>
                    <fullName>CAW</fullName>
                </value>
                <value>
                    <fullName>ESurrey</fullName>
                </value>
                <value>
                    <fullName>GEM</fullName>
                </value>
                <value>
                    <fullName>Greenwich</fullName>
                </value>
                <value>
                    <fullName>HEAL</fullName>
                </value>
                <value>
                    <fullName>HIHO</fullName>
                </value>
                <value>
                    <fullName>Lanc</fullName>
                </value>
                <value>
                    <fullName>MRK</fullName>
                </value>
                <value>
                    <fullName>NCBirm</fullName>
                </value>
                <value>
                    <fullName>NManc</fullName>
                </value>
                <value>
                    <fullName>SBirm</fullName>
                </value>
                <value>
                    <fullName>SLL</fullName>
                </value>
                <value>
                    <fullName>SWarkS</fullName>
                </value>
                <value>
                    <fullName>TRIW</fullName>
                </value>
                <value>
                    <fullName>WHR</fullName>
                </value>
                <value>
                    <fullName>WSurrey</fullName>
                </value>
                <value>
                    <fullName>Exclude from booking form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_time_location__c</fullName>
        <inlineHelpText>Please add the date, time and location information for the event here. If there are multiple dates for this event, please add them on separate lines.</inlineHelpText>
        <label>Date, time, location</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Directions__c</fullName>
        <inlineHelpText>This is a URL field and will change anything entered into the field into a URL starting with http...
It is specifically meant for links to google maps etc</inlineHelpText>
        <label>Directions (website link)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>End_time__c</fullName>
        <label>End time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_end_date__c</fullName>
        <description>Marks end date of an event</description>
        <label>Event end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extra_info__c</fullName>
        <inlineHelpText>Extra info for training confirmation emails. Max characters 255.</inlineHelpText>
        <label>Extra info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HR_Event_Status__c</fullName>
        <label>HR Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event to be confirmed</fullName>
                </value>
                <value>
                    <fullName>Event Date and Venue confirmed</fullName>
                </value>
                <value>
                    <fullName>Less than one week until event</fullName>
                </value>
                <value>
                    <fullName>Event done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HR_Event_Type__c</fullName>
        <label>HR Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assessment</fullName>
                </value>
                <value>
                    <fullName>Training Event</fullName>
                </value>
                <value>
                    <fullName>Back-Up Training Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hide_HR_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide HR Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaxAttendee__c</fullName>
        <label>MaxAttendee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packing_list__c</fullName>
        <label>Packing list</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Role_to_be_assessed1__c</fullName>
        <description>The field label has been changed for consistency. API name has remained the same. This field is used in booking form</description>
        <label>Roles to invite</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Programme Leader</fullName>
                </value>
                <value>
                    <fullName>Assistant Programme Leader</fullName>
                </value>
                <value>
                    <fullName>Senior Mentor</fullName>
                </value>
                <value>
                    <fullName>Community Facilitator</fullName>
                </value>
                <value>
                    <fullName>Support Worker</fullName>
                </value>
                <value>
                    <fullName>Residential Mentor</fullName>
                </value>
                <value>
                    <fullName>Practitioner Plus</fullName>
                </value>
                <value>
                    <fullName>Practitioner - Drama</fullName>
                </value>
                <value>
                    <fullName>Practitioner - Enterprise</fullName>
                </value>
                <value>
                    <fullName>Practitioner - Sport</fullName>
                </value>
                <value>
                    <fullName>Practitioner - Photography</fullName>
                </value>
                <value>
                    <fullName>Practitioner - Media</fullName>
                </value>
                <value>
                    <fullName>Project Volunteer</fullName>
                </value>
                <value>
                    <fullName>Senior Associate Mentor</fullName>
                </value>
                <value>
                    <fullName>Associate Mentor</fullName>
                </value>
                <value>
                    <fullName>Youth Board Member</fullName>
                </value>
                <value>
                    <fullName>TCS Mentor</fullName>
                </value>
                <value>
                    <fullName>The Challenge Academy</fullName>
                </value>
                <value>
                    <fullName>Personal Coach</fullName>
                </value>
                <value>
                    <fullName>Practitioner - Music</fullName>
                </value>
                <value>
                    <fullName>Logistics Officer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roles_to_be_assessed__c</fullName>
        <description>Originally called &quot;Roles to be assessed&quot; but changed for consistency. API name is still the same as this field is used in the visual force booking form</description>
        <label>Roles to invite (OLD)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Programme Leader</fullName>
                </value>
                <value>
                    <fullName>Assistant Programme Leader</fullName>
                </value>
                <value>
                    <fullName>Senior Mentor</fullName>
                </value>
                <value>
                    <fullName>Community Mentor</fullName>
                </value>
                <value>
                    <fullName>Support Worker</fullName>
                </value>
                <value>
                    <fullName>Logs Officer</fullName>
                </value>
                <value>
                    <fullName>Residential Accommodation Manager</fullName>
                </value>
                <value>
                    <fullName>Practitioner Plus</fullName>
                </value>
                <value>
                    <fullName>Practitioner - Drama</fullName>
                </value>
                <value>
                    <fullName>Practitioner - Enterprise</fullName>
                </value>
                <value>
                    <fullName>Practitioner - Sport</fullName>
                </value>
                <value>
                    <fullName>Practitioner - Photography</fullName>
                </value>
                <value>
                    <fullName>Practitioner - Media</fullName>
                </value>
                <value>
                    <fullName>Senior Associate Mentor</fullName>
                </value>
                <value>
                    <fullName>Associate Mentor</fullName>
                </value>
                <value>
                    <fullName>Youth Board Member</fullName>
                </value>
                <value>
                    <fullName>TCS Mentor</fullName>
                </value>
                <value>
                    <fullName>The Challenge Academy</fullName>
                </value>
                <value>
                    <fullName>Personal Coach</fullName>
                </value>
                <value>
                    <fullName>Project Volunteer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff_type__c</fullName>
        <label>Staff type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Core Staff</fullName>
                </value>
                <value>
                    <fullName>New Application</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Returner</fullName>
                </value>
                <value>
                    <fullName>Returner - different role</fullName>
                </value>
                <value>
                    <fullName>Returner - same role</fullName>
                </value>
                <value>
                    <fullName>Returner - lower role</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_time__c</fullName>
        <label>Start time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCN_Staff_member_1__c</fullName>
        <label>TCN Staff member 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCN_Staff_member_2__c</fullName>
        <label>TCN Staff member 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCN_Staff_member_3__c</fullName>
        <label>TCN Staff member 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variable_date_location_info__c</fullName>
        <label>Variable date/location info</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_address__c</fullName>
        <description>Address of venue where HR event is being held</description>
        <label>Venue address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>YP_end_time__c</fullName>
        <description>Shows time YP finishes at assessment</description>
        <label>YP end time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP_hours_required__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Field that shows the number of hours that Assessor YPs will be required at Assessments</description>
        <label>YP Hours required</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YP_start_time__c</fullName>
        <label>YP start time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>total_capacity_reached__c</fullName>
        <formula>IF(  Attendee__c   =   MaxAttendee__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total capacity reached</label>
        <type>Text</type>
    </fields>
    <label>HR Event</label>
    <listViews>
        <fullName>All_Assessments</fullName>
        <columns>Event_Date__c</columns>
        <columns>Attendee__c</columns>
        <columns>HR_Event_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>Start_time__c</columns>
        <columns>End_time__c</columns>
        <columns>MaxAttendee__c</columns>
        <columns>Role_to_be_assessed1__c</columns>
        <columns>Cluster1__c</columns>
        <columns>Directions__c</columns>
        <columns>Venue__c</columns>
        <columns>YP_hours_required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event__c.Assessment</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>test,dummy,n/a</value>
        </filters>
        <filters>
            <field>Event_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/28/2014</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>Richard,Agne</value>
        </filters>
        <filters>
            <field>Venue_address__c</field>
            <operation>notEqual</operation>
            <value>The Custard Factory Gibb Street Birmingham  B9 4AA</value>
        </filters>
        <label>All Assessments - London</label>
    </listViews>
    <listViews>
        <fullName>All_Assessments_London</fullName>
        <columns>Event_Date__c</columns>
        <columns>Attendee__c</columns>
        <columns>HR_Event_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>Start_time__c</columns>
        <columns>End_time__c</columns>
        <columns>MaxAttendee__c</columns>
        <columns>Role_to_be_assessed1__c</columns>
        <columns>Cluster1__c</columns>
        <columns>Directions__c</columns>
        <columns>Venue__c</columns>
        <columns>YP_hours_required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event__c.Assessment</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>test,dummy,n/a</value>
        </filters>
        <filters>
            <field>Event_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/28/2014</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Jacqui,Jude</value>
        </filters>
        <filters>
            <field>Venue_address__c</field>
            <operation>notEqual</operation>
            <value>The Custard Factory Gibb Street Birmingham  B9 4AA</value>
        </filters>
        <label>All Assessments - London</label>
    </listViews>
    <listViews>
        <fullName>All_Assessments_London1</fullName>
        <columns>Event_Date__c</columns>
        <columns>Attendee__c</columns>
        <columns>HR_Event_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>Start_time__c</columns>
        <columns>End_time__c</columns>
        <columns>MaxAttendee__c</columns>
        <columns>Role_to_be_assessed1__c</columns>
        <columns>Cluster1__c</columns>
        <columns>Directions__c</columns>
        <columns>Venue__c</columns>
        <columns>YP_hours_required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event__c.Assessment</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>test,dummy,n/a</value>
        </filters>
        <filters>
            <field>Event_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/28/2014</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>Richard,Agne</value>
        </filters>
        <filters>
            <field>Venue_address__c</field>
            <operation>notEqual</operation>
            <value>The Custard Factory Gibb Street Birmingham  B9 4AA</value>
        </filters>
        <label>All Assessments - London</label>
    </listViews>
    <listViews>
        <fullName>All_Assessments_London2</fullName>
        <columns>Event_Date__c</columns>
        <columns>Attendee__c</columns>
        <columns>HR_Event_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>Start_time__c</columns>
        <columns>End_time__c</columns>
        <columns>MaxAttendee__c</columns>
        <columns>Role_to_be_assessed1__c</columns>
        <columns>Cluster1__c</columns>
        <columns>Directions__c</columns>
        <columns>Venue__c</columns>
        <columns>YP_hours_required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event__c.Assessment</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>test,dummy,n/a</value>
        </filters>
        <filters>
            <field>Event_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/18/2015</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>Richard,Agne</value>
        </filters>
        <filters>
            <field>Venue_address__c</field>
            <operation>notEqual</operation>
            <value>The Custard Factory Gibb Street Birmingham  B9 4AA</value>
        </filters>
        <label>All Assessments - London</label>
    </listViews>
    <listViews>
        <fullName>All_Assessments_London_rick</fullName>
        <columns>Event_Date__c</columns>
        <columns>Attendee__c</columns>
        <columns>HR_Event_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>Start_time__c</columns>
        <columns>End_time__c</columns>
        <columns>MaxAttendee__c</columns>
        <columns>Cluster_s__c</columns>
        <columns>Role_to_be_assessed1__c</columns>
        <columns>Cluster1__c</columns>
        <columns>Directions__c</columns>
        <columns>Venue__c</columns>
        <columns>YP_hours_required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event__c.Assessment</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>test,dummy,n/a</value>
        </filters>
        <filters>
            <field>Event_Date__c</field>
            <operation>greaterThan</operation>
            <value>2/13/2014</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>Richard,Agne</value>
        </filters>
        <filters>
            <field>Venue_address__c</field>
            <operation>notEqual</operation>
            <value>The Custard Factory Gibb Street Birmingham  B9 4AA</value>
        </filters>
        <label>All Assessments - London - rick</label>
    </listViews>
    <listViews>
        <fullName>All_Assessments_SLS1</fullName>
        <columns>Event_Date__c</columns>
        <columns>Attendee__c</columns>
        <columns>HR_Event_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>Start_time__c</columns>
        <columns>End_time__c</columns>
        <columns>MaxAttendee__c</columns>
        <columns>Role_to_be_assessed1__c</columns>
        <columns>Cluster1__c</columns>
        <columns>Directions__c</columns>
        <columns>Venue__c</columns>
        <columns>YP_hours_required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event__c.Assessment</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>test,dummy,n/a</value>
        </filters>
        <filters>
            <field>Event_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/28/2013</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Gaia,Kate,Hannah</value>
        </filters>
        <filters>
            <field>Venue_address__c</field>
            <operation>notEqual</operation>
            <value>The Custard Factory Gibb Street Birmingham  B9 4AA</value>
        </filters>
        <label>All Assessments - SLS</label>
    </listViews>
    <listViews>
        <fullName>All_Assessments_SLS2</fullName>
        <booleanFilter>1 AND 2 AND 3 and 4</booleanFilter>
        <columns>Event_Date__c</columns>
        <columns>Attendee__c</columns>
        <columns>HR_Event_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>Start_time__c</columns>
        <columns>End_time__c</columns>
        <columns>MaxAttendee__c</columns>
        <columns>Role_to_be_assessed1__c</columns>
        <columns>Cluster1__c</columns>
        <columns>Directions__c</columns>
        <columns>Venue__c</columns>
        <columns>YP_hours_required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event__c.Training</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>test,dummy,n/a</value>
        </filters>
        <filters>
            <field>Event_Date__c</field>
            <operation>greaterThan</operation>
            <value>8/18/2014</value>
        </filters>
        <filters>
            <field>Role_to_be_assessed1__c</field>
            <operation>equals</operation>
            <value>Community Facilitator</value>
        </filters>
        <label>CF Training</label>
    </listViews>
    <listViews>
        <fullName>All_Back_Up_Training_Events</fullName>
        <columns>NAME</columns>
        <columns>HR_Event_Type__c</columns>
        <columns>Role_to_be_assessed1__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Event_end_date__c</columns>
        <columns>Start_time__c</columns>
        <columns>End_time__c</columns>
        <columns>MaxAttendee__c</columns>
        <columns>Cluster1__c</columns>
        <columns>Attendee__c</columns>
        <columns>Directions__c</columns>
        <columns>Venue__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event__c.Training,HR_Event__c.BackUp_Training</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>test,dummy,n/a</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>back</value>
        </filters>
        <label>All Back Up Training Events</label>
        <sharedTo>
            <group>Central_Comms</group>
            <group>Central_Comms_Admins</group>
            <group>Development186351</group>
            <group>Nat_Staffing_Dashboard_Recipients_2014</group>
            <group>Staffing_2013</group>
            <group>Staffing_Midlands_2013</group>
            <group>Staffing_North_West_2013</group>
            <group>Staffing_West_London_2013</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Future_Assessments_London2</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>Event_Date__c</columns>
        <columns>Attendee__c</columns>
        <columns>MaxAttendee__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Cluster1__c</columns>
        <columns>Role_to_be_assessed1__c</columns>
        <columns>Directions__c</columns>
        <columns>Venue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event__c.Assessment</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>test,dummy,n/a</value>
        </filters>
        <filters>
            <field>Event_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Cluster_s__c</field>
            <operation>includes</operation>
            <value>BANT,BB,BCHIC,BHEN,CAS,ESurrey,Greenwich,WHR,WSurrey,HEAL,HIHO,MRK,TRIW</value>
        </filters>
        <filters>
            <field>Role_to_be_assessed1__c</field>
            <operation>includes</operation>
            <value>Programme Leader,Assistant Programme Leader,Senior Mentor</value>
        </filters>
        <label>All Future Assessments - London</label>
    </listViews>
    <listViews>
        <fullName>All_Leader_Assessments</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Event_Date__c</columns>
        <columns>Start_time__c</columns>
        <columns>End_time__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Cluster1__c</columns>
        <columns>MaxAttendee__c</columns>
        <columns>Attendee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Leader</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event__c.Assessment</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>test,n/a,dummy</value>
        </filters>
        <filters>
            <field>Event_Date__c</field>
            <operation>greaterThan</operation>
            <value>5/22/2012</value>
        </filters>
        <label>All Leader Assessments</label>
        <sharedTo>
            <group>Central_Comms</group>
            <group>Central_Comms_Admins</group>
            <group>Staffing_2013</group>
            <group>Staffing_Midlands_2013</group>
            <group>Staffing_North_West_2013</group>
            <group>Staffing_West_London_2013</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Logistics_and_RAM_Training_events</fullName>
        <columns>Event_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>Start_time__c</columns>
        <columns>End_time__c</columns>
        <columns>MaxAttendee__c</columns>
        <columns>Attendee__c</columns>
        <columns>Role_to_be_assessed1__c</columns>
        <columns>Cluster1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event__c.Training</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>test,dummy,n/a</value>
        </filters>
        <filters>
            <field>Role_to_be_assessed1__c</field>
            <operation>includes</operation>
            <value>Logs Officer,Residential Accommodation Manager</value>
        </filters>
        <label>All  Logistics and RAM Training events</label>
    </listViews>
    <listViews>
        <fullName>All_London_Assessments</fullName>
        <columns>Event_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>Start_time__c</columns>
        <columns>End_time__c</columns>
        <columns>MaxAttendee__c</columns>
        <columns>Attendee__c</columns>
        <columns>Role_to_be_assessed1__c</columns>
        <columns>Cluster1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event__c.Assessment</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>test,dummy,n/a</value>
        </filters>
        <filters>
            <field>Event_Date__c</field>
            <operation>greaterThan</operation>
            <value>2/1/2012</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Lanc,manc,scaw,bc,birmingham,black</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>notContain</operation>
            <value>Richard,Agne</value>
        </filters>
        <label>Old London Assessments</label>
    </listViews>
    <listViews>
        <fullName>All_London_Leader_Assessments</fullName>
        <columns>Event_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>NAME</columns>
        <columns>Start_time__c</columns>
        <columns>End_time__c</columns>
        <columns>MaxAttendee__c</columns>
        <columns>Attendee__c</columns>
        <columns>Role_to_be_assessed1__c</columns>
        <columns>Cluster1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event__c.Assessment</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>test,dummy,n/a</value>
        </filters>
        <filters>
            <field>Event_Date__c</field>
            <operation>greaterThan</operation>
            <value>5/22/2012</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Lanc,manc,scaw,bc,birmingham,black</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>leader</value>
        </filters>
        <label>All London Leader Assessments</label>
    </listViews>
</CustomObject>